--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mne = "^0.24.1"
 pooch = "^1.6.0"
 tqdm = "^4.63.0"
 tensorflow = "^2.8.0"
+urllib3 = "1.26.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.4"
